--- a/2021/day15/shard.yml
+++ b/2021/day15/shard.yml
@@ -3,4 +3,5 @@ version: 0.1.0
 
 dependencies:
   dijkstra:
-    github: geocrystal/dijkstra
+    path: ../../../crystal/geocrystal/dijkstra
+    # github: geocrystal/dijkstra
