use dijkstra from repo

--- a/2022/day12/shard.yml
+++ b/2022/day12/shard.yml
@@ -2,6 +2,6 @@ name: day12
 version: 0.1.0
 
 dependencies:
-  priority-queue:
-    github: spider-gazelle/priority-queue
-    branch: master
+  dijkstra:
+    github: geocrystal/dijkstra
+    branch: main
